--- a/src/web/static/style.css
+++ b/src/web/static/style.css
@@ -42,6 +42,7 @@ body {
     height: 80vh;
     overflow-y: auto;
     overflow-x: hidden;
+    width: max-content;
 }
 
 form {
@@ -66,6 +67,11 @@ th {
     position: sticky;
     top: 0;
     z-index: 1;
+    width: 100px;
+}
+
+.code {
+    width: 150px;
 }
 
 input[type=text], select {
@@ -111,6 +117,25 @@ input[type=submit]:hover {
 
 .hidden {
   display: none;
+}
+
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #333;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spinner-rotation 0.8s infinite linear;
+  margin: 10px auto;
+}
+
+@keyframes spinner-rotation {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .form-url-container {
