--- a/src/web/templates/history.html
+++ b/src/web/templates/history.html
@@ -7,63 +7,68 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script src="{{ url_for('static', filename='script.js') }}" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="my-container">
+      <!-- Sidebar -->
       <div class="form-container">
+        <!-- Form -->
         <form id="course-form" method="POST">
-          <label for="year"><b>Academic Year:</b></label><br>
-          <select id="year" name="year">
-            <option value="21/22" {% if request.form.year == "21/22" %}selected{% endif %}>21/22</option>
-            <option value="22/23" {% if request.form.year == "22/23" %}selected{% endif %}>22/23</option>
-            <option value="23/24" {% if request.form.year == "23/24" or not request.form.year %}selected{% endif %}>23/24</option>
-            <!-- Add more years as needed -->
-          </select>
-          <br>
-          <label><b>Semester:</b></label><br>
-          <div class="radiobutton">
-            <label for="semester1">
-              <input type="radio" id="semester1" name="semester" value="1" 
-              {% if request.form.semester == "1" or not request.form.semester %}checked{% endif %}>
-              Semester 1
-            </label>
+          <!-- Add academic years here -->
+          <div class="form-group">
+            <label for="year"><b>Academic Year:</b></label><br>
+            <div class="btn-group-toggle" data-toggle="buttons">
+              <label class="btn btn-secondary {% if request.form.year == "21/22" or not request.form.year %}active{% endif %}">
+                <input type="radio" id="year1" name="year" value="21/22" autocomplete="off" {% if request.form.year == "21/22" or not request.form.year %}checked{% endif %}> 21/22
+              </label>
+              <label class="btn btn-secondary {% if request.form.year == "22/23" %}active{% endif %}">
+                <input type="radio" id="year2" name="year" value="22/23" autocomplete="off" {% if request.form.year == "22/23" %}checked{% endif %}> 22/23
+              </label>
+              <label class="btn btn-secondary {% if request.form.year == "23/24" %}active{% endif %}">
+                <input type="radio" id="year3" name="year" value="23/24" autocomplete="off" {% if request.form.year == "23/24" %}checked{% endif %}> 23/24
+              </label>
+            </div>
           </div>
-          <div class="radiobutton">
-            <label for="semester2">
-              <input type="radio" id="semester2" name="semester" value="2" 
-              {% if request.form.semester == "2" %}checked{% endif %}>
-              Semester 2
-            </label>
+          <!-- Semesters -->
+          <div class="form-group">
+            <label for="semester"><b>Semester:</b></label><br>
+            <div class="btn-group-toggle" data-toggle="buttons">
+              <label class="btn btn-secondary {% if request.form.semester == "1" or not request.form.semester %}active{% endif %}">
+                <input type="radio" id="semester1" name="semester" value="1" autocomplete="off" {% if request.form.semester == "1" or not request.form.semester %}checked{% endif %}> Semester 1
+              </label>
+              <label class="btn btn-secondary {% if request.form.semester == "2" %}active{% endif %}">
+                <input type="radio" id="semester2" name="semester" value="2" autocomplete="off" {% if request.form.semester == "2" %}checked{% endif %}> Semester 2
+              </label>
+            </div>
           </div>
-          <label><b>Type:</b></label><br>
-          <div class="radiobutton">
-            <label for="ug">
-              <input type="radio" id="ug" name="type" value="ug" 
-              {% if request.form.type == "ug" or not request.form.type %}checked{% endif %}>
-              Undergraduate
-            </label>
+          <!-- Undergraduate or Graduate Selection -->
+          <div class="form-group">
+            <label for="type"><b>Type:</b></label><br>
+            <div class="btn-group-toggle" data-toggle="buttons">
+              <label class="btn btn-secondary {% if request.form.type == "ug" or not request.form.type %}active{% endif %}">
+                <input type="radio" id="ug" name="type" value="ug" autocomplete="off" {% if request.form.type == "ug" or not request.form.type %}checked{% endif %}> Undergraduate
+              </label>
+              <label class="btn btn-secondary {% if request.form.type == "gd" %}active{% endif %}">
+                <input type="radio" id="gd" name="type" value="gd" autocomplete="off" {% if request.form.type == "gd" %}checked{% endif %}> Graduate
+              </label>
+            </div>
           </div>
-          <div class="radiobutton">
-            <label for="gd">
-              <input type="radio" id="gd" name="type" value="gd" 
-              {% if request.form.type == "gd" %}checked{% endif %}>
-              Graduate
-            </label>
-          </div>
+          <!-- Search Bar -->
           <label for="course_codes"><b>Course Codes:</b></label><br>
           <input type="text" id="search-input" name="search-input" oninput="filterCourses()" placeholder="Search by Course Code" value="{{ request.form.get('search-input', '') }}" autocomplete="off">
-          <div id="loading-spinner" class="hidden">
-            <div class="spinner"></div>
-          </div>
         </form> 
         {% if error %}
-        <div style="color: #f44336; font-size: 0.8em;">
-          <strong>Error:</strong>
-          <ul>
-            <li>{{ error }}</li>
-          </ul>
+        <div class="alert alert-danger">
+          <strong>Error:</strong> {{ error }}
         </div>
         {% endif %}
+        <div id="loading-spinner" class="hidden">
+          <div class="spinner"></div>
+        </div>
       </div>
 
       <div class="table-container">
