--- a/src/web/templates/history.html
+++ b/src/web/templates/history.html
@@ -22,14 +22,14 @@
           <div class="form-group">
             <label for="year"><b>Academic Year:</b></label><br>
             <div class="btn-group-toggle" data-toggle="buttons">
-              <label class="btn btn-secondary {% if request.form.year == "21/22" or not request.form.year %}active{% endif %}">
-                <input type="radio" id="year1" name="year" value="21/22" autocomplete="off" {% if request.form.year == "21/22" or not request.form.year %}checked{% endif %}> 21/22
+              <label class="btn btn-secondary {% if request.form.year == "2122" %}active{% endif %}">
+                <input type="radio" id="year1" name="year" value="2122" autocomplete="off" {% if request.form.year == "2122" %}checked{% endif %}> 21/22
               </label>
-              <label class="btn btn-secondary {% if request.form.year == "22/23" %}active{% endif %}">
-                <input type="radio" id="year2" name="year" value="22/23" autocomplete="off" {% if request.form.year == "22/23" %}checked{% endif %}> 22/23
+              <label class="btn btn-secondary {% if request.form.year == "2223" %}active{% endif %}">
+                <input type="radio" id="year2" name="year" value="2223" autocomplete="off" {% if request.form.year == "2223" %}checked{% endif %}> 22/23
               </label>
-              <label class="btn btn-secondary {% if request.form.year == "23/24" %}active{% endif %}">
-                <input type="radio" id="year3" name="year" value="23/24" autocomplete="off" {% if request.form.year == "23/24" %}checked{% endif %}> 23/24
+              <label class="btn btn-secondary {% if request.form.year == "2324" or not request.form.year %}active{% endif %}">
+                <input type="radio" id="year3" name="year" value="2324" autocomplete="off" {% if request.form.year == "2324" or not request.form.year %}checked{% endif %}> 23/24
               </label>
             </div>
           </div>
@@ -77,10 +77,14 @@
             <tr>
               <th class="code">Course Code</th>
               <th>Class</th>
-              <th>Round 0</th>
-              <th>Round 1</th>
-              <th>Round 2</th>
-              <th>Round 3</th>
+              <th><a href="{{ url_for('serve_pdf', filename=request.form.get('year', '2324') ~ '/' ~ request.form.get('semester', '1') ~ '/' ~ request.form.get('type', 'ug') ~ '/round_0.pdf') }}" target="_blank">Round 0</a></th>
+              <th><a href="{{ url_for('serve_pdf', filename=request.form.get('year', '2324') ~ '/' ~ request.form.get('semester', '1') ~ '/' ~ request.form.get('type', 'ug') ~ '/round_1.pdf') }}" target="_blank">Round 1</a></th>
+              <th><a href="{{ url_for('serve_pdf', filename=request.form.get('year', '2324') ~ '/' ~ request.form.get('semester', '1') ~ '/' ~ request.form.get('type', 'ug') ~ '/round_2.pdf') }}" target="_blank">Round 2</a></th>
+              <th><a href="{{ url_for('serve_pdf', filename=request.form.get('year', '2324') ~ '/' ~ request.form.get('semester', '1') ~ '/' ~ request.form.get('type', 'ug') ~ '/round_3.pdf') }}" target="_blank">Round 3</a></th>
+              <!-- <th>Round 0</th> -->
+              <!-- <th>Round 1</th> -->
+              <!-- <th>Round 2</th> -->
+              <!-- <th>Round 3</th> -->
             </tr>
           </thead>
           <tbody>
