--- a/src/web/templates/history.html
+++ b/src/web/templates/history.html
@@ -77,14 +77,17 @@
             <tr>
               <th class="code">Course Code</th>
               <th>Class</th>
-              <th><a href="{{ url_for('serve_pdf', filename=request.form.get('year', '2324') ~ '/' ~ request.form.get('semester', '1') ~ '/' ~ request.form.get('type', 'ug') ~ '/round_0.pdf') }}" target="_blank">Round 0</a></th>
-              <th><a href="{{ url_for('serve_pdf', filename=request.form.get('year', '2324') ~ '/' ~ request.form.get('semester', '1') ~ '/' ~ request.form.get('type', 'ug') ~ '/round_1.pdf') }}" target="_blank">Round 1</a></th>
-              <th><a href="{{ url_for('serve_pdf', filename=request.form.get('year', '2324') ~ '/' ~ request.form.get('semester', '1') ~ '/' ~ request.form.get('type', 'ug') ~ '/round_2.pdf') }}" target="_blank">Round 2</a></th>
-              <th><a href="{{ url_for('serve_pdf', filename=request.form.get('year', '2324') ~ '/' ~ request.form.get('semester', '1') ~ '/' ~ request.form.get('type', 'ug') ~ '/round_3.pdf') }}" target="_blank">Round 3</a></th>
-              <!-- <th>Round 0</th> -->
-              <!-- <th>Round 1</th> -->
-              <!-- <th>Round 2</th> -->
-              <!-- <th>Round 3</th> -->
+              {% for round_num in range(4) %}
+              {% set filename = request.form.get('year', '2324') ~ '/' ~ request.form.get('semester', '1') ~ '/' ~ request.form.get('type', 'ug') ~ '/round_' ~ round_num ~ '.pdf' %}
+              {% set url = url_for('serve_pdf', filename=filename) %}
+              <th>
+                {% if round_exists[round_num] %}
+                <a href="{{ url }}" target="_blank">Round {{ round_num }}</a>
+                {% else %}
+                Round {{ round_num }}
+                {% endif %}
+              </th>
+              {% endfor %}
             </tr>
           </thead>
           <tbody>
