--- a/src/web/templates/history.html
+++ b/src/web/templates/history.html
@@ -61,6 +61,11 @@
           <label for="course_codes"><b>Course Codes:</b></label><br>
           <input type="text" id="search-input" name="search-input" oninput="filterCourses()" placeholder="Search by Course Code" value="{{ request.form.get('search-input', '') }}" autocomplete="off">
         </form> 
+        <!-- Toggle Visibility -->
+        <label for="toggle-column-checkbox" class="btn btn-secondary">
+          <input type="checkbox" id="toggle-column-checkbox" autocomplete="off" checked> 
+          Show Course Names
+        </label>
         {% if error %}
         <div class="alert alert-danger">
           <strong>Error:</strong> {{ error }}
@@ -72,15 +77,17 @@
       </div>
 
       <div class="table-container">
-        <table>
+        <table id="table-data">
+          <!-- Table Headers -->
           <thead>
             <tr>
-              <th class="code">Course Code</th>
-              <th>Class</th>
+              <th class="table-code">Code</th>
+              <th>Name</th>
+              <th class="table-class">Class</th>
               {% for round_num in range(4) %}
               {% set filename = request.form.get('year', '2324') ~ '/' ~ request.form.get('semester', '1') ~ '/' ~ request.form.get('type', 'ug') ~ '/round_' ~ round_num ~ '.pdf' %}
               {% set url = url_for('serve_pdf', filename=filename) %}
-              <th>
+              <th class='table-round'>
                 {% if round_exists[round_num] %}
                 <a href="{{ url }}" target="_blank">Round {{ round_num }}</a>
                 {% else %}
@@ -90,11 +97,17 @@
               {% endfor %}
             </tr>
           </thead>
+          <!-- Table Data -->
           <tbody>
             {% for course in output %}
             {% for class_name, class_data in course.classes.items() %}
             <tr>
               <td>{{ course.code }}</td>
+              <td>
+                {% if loop.first %}
+                  {{ course.title }}
+                {% endif %}
+              </td>
               <td>{{ class_name }}</td>
               {% for data in class_data %}
               <td class="{% if data.demand == -1 and data.vacancy == -1 %}no-data{% elif data.demand < data.vacancy %}less-demand{% elif data.demand > data.vacancy %}more-demand{% else %}equal-demand{% endif %}">
