--- a/src/web/templates/history.html
+++ b/src/web/templates/history.html
@@ -129,5 +129,11 @@
           </tbody>
         </table>
       </div>
+    </div>
+    <footer>
+      Made with ❤️ by et
+      •
+      <a class="github-link" href="https://github.com/et-irl/courserekt" target="_blank">GitHub</a>
+    </footer>
   </body>
 </html>
