--- a/src/web/templates/history.html
+++ b/src/web/templates/history.html
@@ -7,7 +7,9 @@
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script src="{{ url_for('static', filename='script.js') }}" defer></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Roboto Font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+    <!-- Custom icons such as the ? marker -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -21,7 +23,7 @@
       <!-- Sidebar -->
       <div class="form-container">
         <h1 style="margin-right: 20px; font-size: 26px; font-weight: bold; font-family: 'Roboto', sans-serif;">🚀 CourseRekt 😵</h1>
-        <p style = "font-size: 1rem;">View current and past data for the registration of NUS courses easily!</p>
+        <p style="font-size: 1rem;">View current and past data for the registration of NUS courses easily!</p>
         <!-- Form -->
         <form id="course-form" method="POST">
           <!-- Add academic years here -->
