--- a/src/web/static/style.css
+++ b/src/web/static/style.css
@@ -6,7 +6,7 @@ body {
     background-color: #F0F0F0;
     flex-direction: column;
     font-family: 'Roboto', sans-serif;
-    overflow: scroll;
+    overflow: hidden;
     padding-bottom: 30px;
 }
 
