Added tests corresponding to missing vacancy data.
Also rolled back "Chrome fix", Firefox becomes
unable to scroll on truncated screen sizes.

--- a/src/web/static/style.css
+++ b/src/web/static/style.css
@@ -6,7 +6,7 @@ body {
     background-color: #F0F0F0;
     flex-direction: column;
     font-family: 'Roboto', sans-serif;
-    overflow: hidden;
+    overflow: scroll;
     padding-bottom: 30px;
 }
 
