--- a/src/web/templates/history.html
+++ b/src/web/templates/history.html
@@ -70,7 +70,7 @@
         <label for="course_codes"><b>Course Codes:</b></label><br>
         <div class="search-bar-container">
           <input type="text" id="search-input" name="search-input" oninput="filterCourses()" placeholder="Search course codes..." autocomplete="off">
-          <span class="help-icon" data-toggle="tooltip" data-placement="top" title="Add a space to get additional search matches (e.g. 'CS2 EL GESS')"><i class="fa fa-question-circle"></i></span>
+          <span class="help-icon" data-toggle="tooltip" data-placement="top" title="Add spaces for additional matches (e.g. 'CS2 EL GESS')"><i class="fa fa-question-circle"></i></span>
         </div>
         <!-- Toggle Course Name Visibility -->
         <label for="toggle-column-checkbox" class="btn btn-secondary">
@@ -78,10 +78,13 @@
           &nbsp;Show Course Names
         </label>
         <!-- Toggle Forecast Visibility -->
-        <label for="toggle-forecast-checkbox" class="btn btn-secondary">
-          <input type="checkbox" id="toggle-forecast-checkbox" style="transform: scale(1.2);" autocomplete="off" checked> 
-          &nbsp;Show Preliminary Vacancies
-        </label>
+        <div>
+          <label for="toggle-forecast-checkbox" class="btn btn-secondary">
+            <input type="checkbox" id="toggle-forecast-checkbox" style="transform: scale(1.2);" autocomplete="off" checked> 
+            &nbsp;Show Original Vacancies
+          </label>
+          <span class="help-icon" data-toggle="tooltip" data-placement="top" title="Original number of slots at the start of the round"><i class="fa fa-question-circle"></i></span>
+        </div>
         {% if error %}
         <div class="alert alert-danger">
           <strong>Error:</strong> {{ error }}
