--- a/src/web/templates/history.html
+++ b/src/web/templates/history.html
@@ -73,8 +73,8 @@
           <span class="help-icon" data-toggle="tooltip" data-placement="top" title="Add spaces for additional matches (e.g. 'CS2 EL GESS')"><i class="fa fa-question-circle"></i></span>
         </div>
         <!-- Toggle Course Name Visibility -->
-        <label for="toggle-column-checkbox" class="btn btn-secondary">
-          <input type="checkbox" id="toggle-column-checkbox" style="transform: scale(1.2);" autocomplete="off" checked> 
+        <label for="toggle-course-names-checkbox" class="btn btn-secondary">
+          <input type="checkbox" id="toggle-course-names-checkbox" style="transform: scale(1.2);" autocomplete="off" checked> 
           &nbsp;Show Course Names
         </label>
         <!-- Toggle Forecast Visibility -->
