--- a/src/web/templates/history.html
+++ b/src/web/templates/history.html
@@ -157,7 +157,7 @@
     <footer>
       ❤️
       •
-      <a class="github-link" href="https://github.com/et-irl/courserekt" target="_blank">GitHub</a>
+      <a class="github-link" href="https://github.com/lunaflight/courserekt" target="_blank">GitHub</a>
     </footer>
   </body>
 </html>
