--- a/src/web/templates/history.html
+++ b/src/web/templates/history.html
@@ -34,8 +34,11 @@
               <label class="btn btn-secondary {% if request.form.year == "2223" %}active{% endif %}">
                 <input type="radio" id="year2" name="year" value="2223" autocomplete="off" {% if request.form.year == "2223" %}checked{% endif %}> 22/23
               </label>
-              <label class="btn btn-secondary {% if request.form.year == "2324" or not request.form.year %}active{% endif %}">
-                <input type="radio" id="year3" name="year" value="2324" autocomplete="off" {% if request.form.year == "2324" or not request.form.year %}checked{% endif %}> 23/24
+              <label class="btn btn-secondary {% if request.form.year == "2324" %}active{% endif %}">
+                <input type="radio" id="year3" name="year" value="2324" autocomplete="off" {% if request.form.year == "2324" %}checked{% endif %}> 23/24
+              </label>
+              <label class="btn btn-secondary {% if request.form.year == "2425" or not request.form.year %}active{% endif %}">
+                <input type="radio" id="year3" name="year" value="2425" autocomplete="off" {% if request.form.year == "2425" or not request.form.year %}checked{% endif %}> 24/25
               </label>
             </div>
           </div>
